[package]
name = "collect_result"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2018"
description = "Crate for collecting an iterator of results into a result of a collection"
repository="https://github.com/LFalch/collect_result"
homepage="https://github.com/LFalch/collect_result"
readme="README.md"
keywords=["iterator_extension"]
categories=["data-structures"]
license="MIT"
exclude= [
    ".gitignore",
    "README.md"
]
